v_utils_macros/tests/compile_fail/own_on_named_variant.stderr
error: custom attribute panicked
 --> $DIR/v_utils_macros/tests/compile_fail/own_on_named_variant.rs:4:1
  |
4 | #[wrap_err]
  | ^^^^^^^^^^^
  |
  = help: message: #[own] variants must be tuple variants with exactly one field, e.g. `Inner(InnerError)`

error: aborting due to 1 previous error

